--- a/main.html
+++ b/main.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <title>Byte Size Calculator</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <h2>Byte Size Calculator</h2>
+  <p>This tool calculates the byte size of any string (including Unicode characters).</p>
+
+  <!-- The script will prompt user for input on page load -->
+  <script type="text/javascript" src="./script.js"></script>
 
 </body>
-
 </html>
